<resources>
    <string name="app_name">BEAUTY SALON</string>
    <string name="Clientes">Clientes</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="ainda_n_a_o_tem_cadastro">Ainda não tem cadastro?</string>
    <string name="empresas">Empresas</string>
    <string name="quem_sou">Quem Sou?</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="usuario">Usuario</string>
    <string name="deslogar">Deslogar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="categorias">Categorias</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="comfirma_senha">Comfirma Senha</string>
    <string name="localizacao">Localição</string>
    <string name="whatsapp">whatsapp</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="estabelecimentos">Estabelecimentos</string>
    <string name="igapora">Igaporã</string>
    <string name="descricao">Descrição</string>
    <string name="cpf_do_proprietario">CPF Do Proprietário</string>
    <string name="nome_do_proprietario">Nome Do Proprietário</string>
    <string name="nome_da_empresa">Nome Da empresa</string>
    <string name="slecionar">Selecione um categoria</string>
    <string name="editar">Editar</string>
    <string name="avalie_a_empresa">Avalie a Empresa</string>
    <string name="avaliar">Avaliar Empresa</string>
    <string name="comfirmar_senha">Comfirmar Senha</string>
    <string name="sair">Sair</string>
    <string name="cabeleireiro">Cabeleireiro</string>
    <string name="limpeza_de_pele">Limpeza de Pele</string>
    <string name="manicure_pedicure">Manicure Pedicure</string>
    <string name="maquiadora">Maquiadora</string>
    <string name="depiladoras">Delipação</string>
    <string name="carregando">Carregando...</string>
    <string name="por_favor_aguarde">Por Favor Aguarde</string>
    <string name="redefinir_senha">Redefinir Senha</string>
    <string name="redefinir">Redefinir</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="deletar">Deletar</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="atualizar_e_mail">Atualizar E-mail</string>
    <string name="alterar_senha">Atualizar Senha </string>
    <string name="apagar_conta">Apagar Conta</string>
    <string name="redefinir_email">Redefinir Email</string>
    <string name="novo_e_mail">Novo E-mail</string>
    <string name="antigo_email">Antigo Email</string>
    <string name="seu_e_mail">Seu E-mail</string>
    <string name="senha_antiga">Senha Antiga</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="dessa_maneira_que_aparece_a_sua_empesa">É dessa maneira que aparece a sua empesa</string>
    <string name="para_os_clientes">Para os clientes</string>
    <string name="categoria_principal">Categoria Principal</string>
    <string name="telefone">Telefone</string>
    <string name="sem_resultado_entrado">Sem Resultado Entrado</string>
    <string name="categorias_adicionais">Categorias Adicionais</string>
    <string name="categoria_s">Categoria(s)</string>
</resources>