<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".empresa.FormCadastroEmpresa"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:id="@+id/containerComponents"
        style="@style/ContainerComponentsEmpresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:orientation="vertical" >
    <EditText
        android:id="@+id/edit_nome_empresa"
        style="@style/EditTextEmpresa"
        android:hint="@string/nome_da_empresa"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_nome_proetario"
        style="@style/EditTextEmpresa"
        android:hint="@string/nome_do_proprietario"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_cpf_proetario"
        style="@style/EditTextEmpresa"
        android:hint="@string/cpf_do_proprietario"
        android:inputType="number" />
    <Spinner
        android:id="@+id/spinner1"
        style="@style/Spinner"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_descricao"
        style="@style/EditTextDescricao"
        android:gravity="top|left"
        android:hint="@string/descricao"
        android:inputType="textMultiLine"
        android:lines="6"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/edit_telefone"
        style="@style/EditTextEmpresa"
        android:hint="@string/whatsapp"
        android:drawableEnd="@drawable/ic_whatsapp"
        android:inputType="phone"
    />

    <EditText
        android:id="@+id/edit_email"
        style="@style/EditTextEmpresa"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/EditTextEmpresa"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edit_comfirma_senha"
        style="@style/EditTextEmpresa"
        android:hint="@string/comfirma_senha"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        />
    </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/btnLogin"
            android:hint="@string/cadastrar"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="@style/ProgressBarLogin"
            android:visibility="invisible"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>