<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".empresa.AtualizarPerfilEmpresa">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/atualizar_perfil"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <LinearLayout
            android:id="@+id/containerComponents"
            style="@style/ContainerComponentsEmpresa"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <EditText
                android:id="@+id/edit_nome_empresa"
                style="@style/EditTextEmpresa"
                android:hint="@string/nome_da_empresa"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_nome_proetario"
                style="@style/EditTextEmpresa"
                android:hint="@string/nome_do_proprietario"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_cpf_proetario"
                style="@style/EditTextEmpresa"
                android:hint="@string/cpf_do_proprietario"
                android:inputType="number" />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/Spinner"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dropdown"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_descricao"
                style="@style/EditTextDescricao"
                android:gravity="top|left"
                android:hint="@string/descricao"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false" />

            <EditText
                android:id="@+id/edit_telefone"
                style="@style/EditTextEmpresa"
                android:drawableEnd="@drawable/ic_whatsapp"
                android:hint="@string/whatsapp"
                android:inputType="phone"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/btnLogin"
            android:hint="@string/atualizar_perfil"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="@style/ProgressBarLogin"
            android:layout_marginTop="0dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>