<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clientes.AtualizarPerfilClienteActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_perfil"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponentsCadastroCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/EditText"
        android:hint="@string/nome_completo"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_cpf"
        style="@style/EditText"
        android:hint="@string/cpf"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        />
    <EditText
        android:id="@+id/edit_telefone"
        style="@style/EditText"
        android:hint="@string/whatsapp"
        android:drawableEnd="@drawable/ic_whatsapp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_cpf"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_atualizar"
        style="@style/btnLogin"
        android:hint="@string/cadastrar"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone" />
    <ProgressBar
        android:id="@+id/progressBar_login"
        style="@style/ProgressBarLogin"
        android:visibility="invisible"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_atualizar" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>