<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AlterarSenha">

    <ImageView
        android:id="@+id/Avatar"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/avatar_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRedefinirSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/redefinir_senha"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textRedefinirSenha">

        <EditText
            android:id="@+id/editAntigaSenha"
            style="@style/EditText"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/senha_antiga"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editNovaSenha"
            style="@style/EditText"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/nova_senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editNovaSenhaConfirma"
            style="@style/EditText"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/comfirmar_senha"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRedefinirSenha"
            style="@style/btnLogin"
            android:hint="@string/redefinir_senha"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>